# stop-aws-gha-runner

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yaml
src/stop_aws_gha_runner/: __main__.py  stop.py
tests/: test_stop.py
