[project]
name = "stop-aws-gha-runner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

dependencies = [
    "boto3", 
    "gha_runner @ git+https://github.com/ethanholz/gha-runner.git@refactor/convert-to-library"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "moto[ec2]",
    "responses"
]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gha_runner = ["*.templ", "templates/*.templ"]

[tool.pytest.ini_options]
markers = ["slow: marks test as slow","main: marks the test for the main module"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "E", "N"]

