[project]
name = "stop-aws-gha-runner"
version = "1.0.0"
description = "Stop an AWS GitHub Actions Runner"
authors = [{ name = "Ethan Holz", email = "ethan.holz@omsf.io" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3",
    "gha_runner",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "moto[ec2]", "responses"]

[build-system]
# We are not going to add versioningit at this time
requires = ["setuptools >= 61.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["slow: marks test as slow"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["F", "E", "N"]
